When merged, this commit solves #75

*****

Added mock_init inpo tests that require the 'style' config param
Avoiding Travis error:
ValueError: 'style' is not a valid bibmanager config parameter.

*****

Updated travis.yml file to include python versions 3.6 to 3.9


*****  Thu Dec 16 23:38:44 CET 2021  *****

Updated sample.bib file.
Updated tests and other auxilliary scripts accordingly.

*****

Updated docs.

*****

Implemented u.parse_search() to parse the input texts that later go
into bm.search().
Documented and tested.

*****

Replaced manual parsing cli_search() with u.parse_search().

*****

Tweaked how u.DynamicKeywordSuggester() gets the completer
to also work in a full-screen application.

*****

Revamped the 'tag search' of the browser to a general search toolbar
which allows to search and display subsets of the entries
categorized by authors/years/tags/etc.

*****

Fixed minor issue with tests.


*****  Mon Dec 20 15:16:36 CET 2021  *****

Turned off complete_while_typing in browser entry-search bar
to prevent bug with auto-suggestions falling on top of quotes.

*****

Updated browser help text.

*****

Updated browser to stay at current loc when performing entry-searches
by keywords.

*****

Bumped bibmanager to version 1.4.1


*****  Sun Jan 30 12:50:17 CET 2022  *****

Fixed bug with Bib.update_content() where tags meta info was being
overwritten even when new values were empty (because empty tags
are [] instead of None).  This caused ads-update to erase the tags
info from the existing database.
Updated tests.

*****

Updated copyright year to 2022.

*****

Bumped bibmanager to version 1.4.2

*****

Updated pygments version requirement for tests.


*****  Fri Aug 26 09:43:16 CEST 2022  *****

Moved from travis to github actions for automated tests.

*****

Merge tags fix from Aaron (ads-update was not preserving tags).
Bumped bibmanager version to 1.4.5.


*****  Fri Sep 23 10:48:21 CEST 2022  *****

Updated bibtex entry in docs and README.
